--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -8,5 +8,23 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": " Host=localhost;Port=5432;Pooling=true;Database=CRUD;User Id=sergioluiz;Password=admin;"
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "../logs/webapi-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {Username} {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
 }
