--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -5,13 +5,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3"/>
+    <PackageReference Include="Serilog" Version="3.0.0-dev-01958"/>
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947"/>
+    <PackageReference Include="Serilog.Settings.Configuration" Version="4.0.0-dev-00486"/>
+    <PackageReference Include="Serilog.AspNetCore" Version="6.1.1-dev-00295"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Infra.Data\Infra.Data.csproj" />
-    <ProjectReference Include="..\Infra.Cross\Infra.Cross.csproj" />
+    <ProjectReference Include="..\Infra.Data\Infra.Data.csproj"/>
+    <ProjectReference Include="..\Infra.Cross\Infra.Cross.csproj"/>
   </ItemGroup>
 </Project>
